--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,1 +1,6 @@
-{}
+{
+  "appId": "com.cymetrikcoreuser.app",
+  "appName": "CymetrikCoreUser",
+  "bundledWebRuntime": false,
+  "webDir": "www"
+}
